django-notes-app-K8s/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: services-apps-k8s
  namespace: apps-k8s
spec:
  selector:
    app: apps-k8s
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
