django-notes-app-K8s/k8s/servicen.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
